Fixed nav bars to their positions on the page and resized + realigned google logo

--- a/style.css
+++ b/style.css
@@ -1,56 +1,76 @@
 /* remove bullet points, margin and padding from the list */
-.navbar ul {
+.navbar-top ul, .navbar-bot ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
 
 /* make the left list elements float on the left-side */
-.navbar ul li.left-side {
+.navbar-top ul li.left-side, .navbar-bot ul li.left-side {
     float: left;
 }
 
 /* make the right list elements float on the right-side */
-.navbar ul li.right-side {
+.navbar-top ul li.right-side, .navbar-bot ul li.right-side {
     float: right;
 }
 
-.navbar ul.bot-nav {
+/* fix the position of the bottom nav bar to be at the bottom */
+.navbar-bot {
     background-color: #ececec;
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
-.navbar ul li a {
+/* fix the position of the top nav bar to be at the top */
+.navbar-top {
+    background-color: #ececec;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+/* customise the hyperlink texts */
+.navbar-top ul li a, .navbar-bot ul li a {
     display: block;
-    padding: 10px 10px;
+    padding: 8px 8px;
     color: #4f5251;
     text-decoration: none;
 }
 
-.navbar ul li a:hover {
+/* Give an underline effect when hovering over the hyperlinks */
+.navbar-top ul li a:hover, .navbar-bot ul li a:hover {
     text-decoration: underline;
 }
 
-.navbar ul li a:visited {
+/* don't decorate any visited hyperlinks */
+.navbar-top ul li a:visited, .navbar-bot ul li a:visited {
     text-decoration: none;
     color: #4f5251;
 }
 
+/* center align the search buttons and alter the padding of the div */
 .search-buttons {
     padding: 10px;
     text-align: center;
 }
 
+/* alter padding and margin of the buttons */
 .search-buttons input {
     padding: 10px;
-    text-align: center;
     margin: 5px 10px;
 }
 
+/* make search bar div wider and centred */
 .search-bar {
     text-align: center;
     padding: 5px;
 }
 
+/* alter the dimensions and space of the actual search bar */
 .search-bar input {
     padding: 8px;
     width: 500px;
@@ -58,7 +78,22 @@
     border-radius: 5px;
 }
 
+/* The location bar settings */
 #location {
     background-color: #ececec;
     padding: 10px 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+
+}
+
+/* center and resize the google image */
+#google-image {
+    display: block;
+    max-width: 30%;
+    width: 50%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
